2014-04-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cfg.c, mxpokeysnd.[ch], pokeysnd.[ch], sound.c, ui.c, configure.ac: Moved the
  SYNCHRONIZED_SOUND code made more generic and moved out of mzpokeysnd.c to
  pokeysnd.c. Now synchronized sound is supported by both pokey sound engines.


2014-03-03  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, atari_basic.c, atari_curses.c, atari_falcon.c, atari_ps2.c,
  atari_x11.c, amiga/amiga.c, dos/atari_vga.c, sdl/main.c,
  win32/atari_win32.c, win32/main.cpp, atari_wince.c Ensure that Sound_Exit()
  is called after config file is saved-on-exit, by moving the call to
  Sound_Exit() out of PLATFORM_Exit() and into Atari800_Exit(). Reason: When
  SOUND_THIN_API is enabled, autosaving after Sound_Exit would cause the
  config file's SOUND_ENABLED entry to always be written as 0.


2014-02-27  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/init.c, sdl/main.c: Avoid "undefined reference to PLATFORM_Time" linker
  error when configured --with-sound=sdl but --with-video != sdl.

* atari.c: Fixed a bug with keyboard input not working on --with-video=ncurses
  --with-audio=oss. On initialisation, Sound_enabled == TRUE but audio output
  is not yet initialised. In such situation calling
  sound_oss.c->PLATFORM_SoundSetup() would close standard input, thus disabling
  keyboard.


2014-02-19  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, android/jni/jni.c, atari800.man, DOC/cart.txt,
  DOC/USAGE, DOC/CREDITS: With Hias' help - documented behaviour of the XEGS
  cartridges more precisely. Also added a different variant of the XEGS 64 KB
  cartridge - both variants were manufactured by Atari.


2014-01-29  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, android/jni/jni.c, atari800.man, DOC/cart.txt,
  DOC/USAGE: Based on description by Hias, added minimal support for the 32
  and 64 MB variants of The!Cart.

* DOC/cart.txt: Added column that describes state of emulation support of